<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Aquarium Dosing</string>
    <string name="app_tagline">Dose smarter, keep water stable.</string>
    <string name="profile_select_title">Choose your aquarium profile</string>
    <string name="profile_select_subtitle">Profiles tailor readings and calculators.</string>
    <string name="profile_select_continue">Continue</string>
    <string name="profile_freshwater">Planted</string>
    <string name="profile_saltwater">Saltwater</string>
    <string name="profile_pond">Sand and Gravel</string>
    <string name="profile_freshwater_desc">Plants, community fish, and goldfish tanks.</string>
    <string name="profile_saltwater_desc">Reef and marine stability readings.</string>
    <string name="profile_pond_desc">Misc Utility &amp; Substrate calculations.</string>
    <string name="profile_freshwater_features">Includes Flourish series dosing.</string>
    <string name="profile_saltwater_features">Includes Reef series dosing.</string>
    <string name="profile_pond_features">Includes substrate volume calculators.</string>
    <string name="profile_badge_freshwater">Planted Profile</string>
    <string name="profile_badge_saltwater">Saltwater Profile</string>
    <string name="profile_badge_pond">Sand and Gravel Profile</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_calculators">Calculators</string>
    <string name="nav_settings">Settings</string>
    <string name="dashboard_title">Water Status</string>
    <string name="dashboard_subtitle">Monitor your aquarium parameters</string>
    <string name="dashboard_section_profile">Tank Profile</string>
    <string name="section_parameters">Water Parameters</string>
    <string name="section_recommendations">Recommendations</string>
    <string name="section_volume">Tank Volume</string>
    <string name="volume_edit_title">Edit tank volume</string>
    <string name="param_ammonia">Ammonia (NH₃/NH₄⁺)</string>
    <string name="param_nitrate">Nitrate (NO₃)</string>
    <string name="param_nitrite">Nitrite (NO₂)</string>
    <string name="param_gh">General Hardness (GH)</string>
    <string name="param_kh">Carbonate Hardness (KH)</string>
    <string name="param_ph">pH</string>
    <string name="param_temp">Temperature</string>
    <string name="param_salinity">Salinity</string>
    <string name="param_alkalinity">Alkalinity (KH)</string>
    <string name="param_calcium">Calcium (Ca)</string>
    <string name="param_magnesium">Magnesium (Mg)</string>
    <string name="param_phosphate">Phosphate (PO4)</string>
    <string name="param_oxygen">Dissolved Oxygen</string>
    <string name="unit_ppm">ppm</string>
    <string name="unit_ppm_caps">PPM</string>
    <string name="unit_dgh">°dGH</string>
    <string name="unit_dkh">°dKH</string>
    <string name="unit_dgh_short">dGH</string>
    <string name="unit_dkh_short">dKH</string>
    <string name="unit_ph">pH</string>
    <string name="unit_temp_c">°C</string>
    <string name="unit_salinity_ppt">ppt</string>
    <string name="unit_calcium_ppm">ppm</string>
    <string name="unit_magnesium_ppm">ppm</string>
    <string name="unit_phosphate_ppm">ppm</string>
    <string name="unit_oxygen_mg_l">mg/L</string>
    <string name="param_potassium">Potassium (K)</string>
    <string name="param_iron">Iron (Fe)</string>
    <string name="param_strontium">Strontium (Sr)</string>
    <string name="param_iodide">Iodide (I)</string>
    <string name="unit_mg_l">mg/L</string>
    <string name="status_good">Good</string>
    <string name="status_danger">DANGER</string>
    <string name="status_warning">High</string>
    <string name="status_info">Info</string>
    <string name="volume_direct">Direct Entry</string>
    <string name="volume_lbh">L × B × H</string>
    <string name="label_volume">Volume</string>
    <string name="label_length">Length</string>
    <string name="label_breadth">Breadth</string>
    <string name="label_height">Height</string>
    <string name="unit_liters">Litres (L)</string>
    <string name="unit_litre">Litres</string>
    <string name="unit_us_gallon">US Gallons</string>
    <string name="unit_uk_gallon">UK Gallons</string>
    <string name="unit_l_short">L</string>
    <string name="unit_us_gal_short">US gal</string>
    <string name="unit_uk_gal_short">UK gal</string>
    <string name="unit_cm">cm</string>
    <string name="unit_in">in</string>
    <string name="unit_ft">ft</string>
    <string name="calculated_volume">Calculated: %s L</string>
    <string name="calc_title">Dosing Calculators</string>
    <string name="calc_subtitle">Precision dosing based on your live readings</string>
    <string name="calc_volume_label">Tank Volume: %s L</string>
    <string name="calc_quick_doses">Quick Doses</string>
    <string name="calc_utilities">Utilities</string>
    <string name="calc_section_supplements">Supplements</string>
    <string name="calc_section_buffers_minerals">Buffers &amp; Minerals</string>
    <string name="calc_section_reef_supplements">Reef Supplements</string>
    <string name="calc_prime_title">Seachem Prime</string>
    <string name="calc_prime_subtitle">Detoxifier &amp; Conditioner</string>
    <string name="calc_stability_title">Seachem Stability</string>
    <string name="calc_stability_subtitle">New Tank Stabilization</string>
    <string name="calc_water_change_title">Water Change Planner</string>
    <string name="calc_water_change_subtitle">Calculate replacement volume</string>
    <string name="calc_prime_info">Use after ammonia spikes or transport stress.</string>
    <string name="calc_stability_info">Supports nitrifying bacteria during cycling.</string>
    <string name="label_change_percent">Change %</string>
    <string name="result_change_volume">Replace %s L</string>
    <string name="result_change_volume_unit">%1$s L (%2$s %3$s)</string>
    <string name="calc_khco3_title">Potassium Bicarbonate</string>
    <string name="calc_khco3_subtitle">Generic KH Booster (KHCO₃)</string>
    <string name="calc_equilibrium_title">Seachem Equilibrium</string>
    <string name="calc_equilibrium_subtitle">GH Booster</string>
    <string name="calc_safe_title">Seachem Safe</string>
    <string name="calc_safe_subtitle">Concentrated Conditioner</string>
    <string name="calc_safe_info">Removes chlorine, chloramine &amp; detoxifies ammonia.
Dose: 1g per 200L.</string>
    <string name="calc_apt_title">APT Complete</string>
    <string name="calc_apt_subtitle">Plant Fertilizer (80% dose)</string>
    <string name="calc_section_buffers">pH Buffers</string>
    <string name="calc_apt_info">80% of standard 3ml/100L daily dose.
Estimated NO₃ increase shown below.</string>
    <string name="calc_neutral_title">Seachem Neutral Regulator</string>
    <string name="calc_neutral_subtitle">pH Neutralizer</string>
    <string name="calc_acid_title">Seachem Acid Buffer</string>
    <string name="calc_acid_subtitle">KH &amp; pH Reducer</string>
    <string name="calc_gold_title">Seachem Gold Buffer</string>
    <string name="calc_gold_subtitle">Goldfish Buffer</string>
    <string name="calc_flourish_title">Seachem Flourish</string>
    <string name="calc_flourish_subtitle">Comprehensive Supplement</string>
    <string name="calc_flourish_iron_title">Seachem Flourish Iron</string>
    <string name="calc_flourish_iron_subtitle">Iron Supplement</string>
    <string name="calc_flourish_nitrogen_title">Seachem Flourish Nitrogen</string>
    <string name="calc_flourish_nitrogen_subtitle">Nitrogen Supplement</string>
    <string name="calc_flourish_phosphorus_title">Seachem Flourish Phosphorus</string>
    <string name="calc_flourish_phosphorus_subtitle">Phosphorus Supplement</string>
    <string name="calc_flourish_potassium_title">Seachem Flourish Potassium</string>
    <string name="calc_flourish_potassium_subtitle">Potassium Supplement</string>
    <string name="calc_flourish_trace_title">Seachem Flourish Trace</string>
    <string name="calc_flourish_trace_subtitle">Trace Elements</string>
    <string name="calc_alkaline_buffer_title">Seachem Alkaline Buffer</string>
    <string name="calc_alkaline_buffer_subtitle">pH Buffer</string>
    <string name="calc_reef_adv_calcium_title">Seachem Reef Advantage Calcium</string>
    <string name="calc_reef_adv_calcium_subtitle">Calcium (Powder)</string>
    <string name="calc_reef_adv_magnesium_title">Seachem Reef Advantage Magnesium</string>
    <string name="calc_reef_adv_magnesium_subtitle">Magnesium (Powder)</string>
    <string name="calc_reef_adv_strontium_title">Seachem Reef Advantage Strontium</string>
    <string name="calc_reef_adv_strontium_subtitle">Strontium (Powder)</string>
    <string name="calc_reef_buffer_title">Seachem Reef Buffer</string>
    <string name="calc_reef_buffer_subtitle">Reef pH Buffer</string>
    <string name="calc_reef_builder_title">Seachem Reef Builder</string>
    <string name="calc_reef_builder_subtitle">Alkalinity Builder</string>
    <string name="calc_reef_calcium_title">Seachem Reef Calcium</string>
    <string name="calc_reef_calcium_subtitle">Calcium (Liquid)</string>
    <string name="calc_reef_carbonate_title">Seachem Reef Carbonate</string>
    <string name="calc_reef_carbonate_subtitle">Carbonate Alkalinity</string>
    <string name="calc_reef_complete_title">Seachem Reef Complete</string>
    <string name="calc_reef_complete_subtitle">Calcium Complete</string>
    <string name="calc_reef_fusion1_title">Seachem Reef Fusion 1</string>
    <string name="calc_reef_fusion1_subtitle">Calcium Supplement</string>
    <string name="calc_reef_fusion2_title">Seachem Reef Fusion 2</string>
    <string name="calc_reef_fusion2_subtitle">Alkalinity Supplement</string>
    <string name="calc_reef_iodide_title">Seachem Reef Iodide</string>
    <string name="calc_reef_iodide_subtitle">Iodide</string>
    <string name="calc_reef_strontium_title">Seachem Reef Strontium</string>
    <string name="calc_reef_strontium_subtitle">Strontium (Liquid)</string>
    <string name="unit_meq_l">meq/L</string>
    <string name="label_current">Current</string>
    <string name="label_target">Target</string>
    <string name="label_current_ca">Current Ca</string>
    <string name="label_target_ca">Desired Ca</string>
    <string name="label_current_mg">Current Mg</string>
    <string name="label_target_mg">Desired Mg</string>
    <string name="label_current_alk">Current Alk</string>
    <string name="label_target_alk">Desired Alk</string>
    <string name="label_current_sr">Current Sr</string>
    <string name="label_target_sr">Desired Sr</string>
    <string name="label_current_i">Current I</string>
    <string name="label_target_i">Desired I</string>
    <string name="label_current_kh_meq">Current KH</string>
    <string name="label_target_kh_meq">Desired KH</string>
    <string name="label_current_gh_meq">Current GH</string>
    <string name="label_target_gh_meq">Desired GH</string>
    <string name="label_current_n">Current N</string>
    <string name="label_target_n">Desired N</string>
    <string name="settings_theme_system">System default</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="menu_switch_profile">Switch profile</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_hardness_unit">Hardness unit</string>
    <string name="menu_settings">Settings</string>
    <string name="cd_expand_card">Expand or collapse card</string>
    <string name="calc_salt_mix_title">Salt Mix Calculator</string>
    <string name="calc_salt_mix_subtitle">Calculate mix for water changes</string>
    <string name="label_salt_product">Salt Product</string>
    <string name="label_salt_volume_us_gallons">Volume (US Gallons)</string>
    <string name="label_current_ppt">Current (PPT)</string>
    <string name="label_desired_ppt">Desired (PPT)</string>
</resources>