<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.seachem_dosing.ui.profile.ProfileSelectionFragment"
        android:label="@string/profile_select_title" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.seachem_dosing.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/navigation_calculators"
        android:name="com.example.seachem_dosing.ui.calculators.CalculatorsFragment"
        android:label="@string/nav_calculators" />

    <fragment
        android:id="@+id/navigation_medication"
        android:name="com.example.seachem_dosing.ui.medication.MedicationFragment"
        android:label="Medication" />

    <fragment
        android:id="@+id/navigation_fertilizer"
        android:name="com.example.seachem_dosing.ui.fertilizer.FertilizerFragment"
        android:label="Fertilizer" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.seachem_dosing.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.seachem_dosing.ui.history.HistoryFragment"
        android:label="@string/nav_history" />

</navigation>
